--- a/EmployeeAccessSystem/appsettings.json
+++ b/EmployeeAccessSystem/appsettings.json
@@ -8,7 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=EmployeeDB;Trusted_Connection=True;"
+  },
+  "Security": {
+    "PasswordKey": "EmployeeSecurity2026@key"
   }
+
 }
 
 
